--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <div class="logo" style="color: white;">Logo</div>
         <nav>
-            <a href="#">Accueil</a>
-            <a href="#">Vins</a>
-            <a href="#">Accessoires</a>
-            <a href="#">Promotions</a>
+            <a href="index.html">Accueil</a>
+            <a href="vins.html">Vins</a>
+            <a href="accessoires.html">Accessoires</a>
+            <a href="apropos.html">À propos</a>
         </nav>
         <a href="#" class="btn-explorer">Explorer</a>
     </header>
@@ -29,7 +29,7 @@
 
     <section class="pillars">
         <div class="container">
-            <h2 style="color: white;">Les quatre piliers de notre marque</h2>
+            <h2 style="color: white;">Les piliers de notre marque</h2>
             <p class="intro">
                 Notre philosophie repose sur quatre fondements essentiels. Chaque pilier représente une facette de notre engagement envers l'excellence. Nous croyons que ces éléments sont la clé pour offrir des vins d'exception.
             </p>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="buttons">
-                <a href="#" class="btn">En savoir plus &rarr;</a>
+                <a href="apropos.html" class="btn">En savoir plus &rarr;</a>
             </div>
         </div>
     </section>
